--- a/metadata.cfg
+++ b/metadata.cfg
@@ -1,12 +1,12 @@
 [metadata]
-version: 2.0.0dev1
-version_info: (2,0,0,'dev',1)
+version: 2.0.0
+version_info: (2,0,0,'final',0)
 description: Python interface to MySQL
 author: Inada Naoki
 author_email: songofacandy@gmail.com
 license: GPL
 platforms: ALL
-url: https://github.com/PyMySQL/mysqlclient-python
+url: https://github.com/axiros/gevent_mysqldb
 classifiers:
         Development Status :: 5 - Production/Stable
         Environment :: Other Environment
