DNS lookups are now 'cooperative', 'gevent friendly'.

--- a/metadata.cfg
+++ b/metadata.cfg
@@ -38,3 +38,4 @@ py_modules:
         MySQLdb.constants.ER
         MySQLdb.constants.FIELD_TYPE
         MySQLdb.constants.FLAG
+        MySQLdb.async
